# random_video_opener

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  go.mod  main.go
cmake/: CompileOptions.cmake
include/builders/: file_list_builder.hpp
include/directory/: directory.hpp
include/openers/: random_file_opener.hpp
random/: random.go  random_test.go
src/: CMakeLists.txt  directory.cpp  directory.hpp  files.cpp  files.hpp  main.cpp
src/Colors/: colors.hpp
src/URNG/: URNG.cpp  URNG.hpp
src/app/: CMakeLists.txt  main.cpp
src/builders/: CMakeLists.txt  file_list_builder.cpp
src/directory/: CMakeLists.txt  directory.cpp
src/openers/: CMakeLists.txt  random_file_opener.cpp
video/: video.go  video_test.go
